Closed
Bug 930532
Opened 12 years ago
Closed 12 years ago
Build error with --enable-warnings-as-errors and MOZ_CUBEB disabled: AudioStream.cpp:81:15: error: ‘double mozilla::GetVolumeScale()’ defined but not used [-Werror=unused-function]
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: dholbert, Assigned: dholbert)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
2.77 KB,
patch
|
padenot
:
review+
|
Details | Diff | Splinter Review |
STR:
Try to build with this mozconfig:
ac_add_options --enable-debug --disable-optimize
ac_add_options --enable-warnings-as-errors
ac_add_options --disable-wave
ac_add_options --disable-ogg
ac_add_options --disable-webm
(Those last 3 lines collectively turn off MOZ_CUBEB)
RESULTS:
This build error:
{
11:32.50 /mozilla-central/content/media/AudioStream.cpp:81:15: error: ‘double mozilla::GetVolumeScale()’ defined but not used [-Werror=unused-function]
11:32.50 static double GetVolumeScale()
11:32.51 ^
11:32.51 /mozilla-central/content/media/AudioStream.cpp:482:1: error: ‘FILE* mozilla::OpenDumpFile(mozilla::AudioStream*)’ defined but not used [-Werror=unused-function]
11:32.51 OpenDumpFile(AudioStream* aStream)
11:32.51 ^
11:32.51 /mozilla-central/content/media/AudioStream.cpp:514:1: error: ‘void mozilla::WriteDumpFile(FILE*, mozilla::AudioStream*, uint32_t, void*)’ defined but not used [-Werror=unused-function]
11:32.51 WriteDumpFile(FILE* aDumpFile, AudioStream* aStream, uint32_t aFrames,
11:32.51 ^
}
I think we just need some #ifdef wrappers around these function definitions.
Assignee | ||
Comment 1•12 years ago
|
||
This fixes my build.
Note that this patch #ifdefs out a few extra things[1] beyond just the functions mentioned in comment 0's error message -- that's because these extra things also become unused (and trigger errors) when I guard out the code from comment 0, so I have to guard them out as well.
[1] SetUint32LE, SetUint16LE, and gDumpedAudioCount
Attachment #821687 -
Flags: review?(paul)
Updated•12 years ago
|
Attachment #821687 -
Flags: review?(paul) → review+
Assignee | ||
Comment 2•12 years ago
|
||
Flags: in-testsuite-
Assignee | ||
Updated•12 years ago
|
Blocks: buildwarning
Comment 3•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Comment 4•12 years ago
|
||
Pointer to Github pull-request
Comment 5•12 years ago
|
||
Comment on attachment 8338778 [details]
Pointer to Github pull request: https://github.com/mozilla-b2g/gaia/pull/14082
Uplift to v1.2
Attachment #8338778 -
Flags: review?(viorela.ioia)
Attachment #8338778 -
Flags: review?(trifandreialin)
Attachment #8338778 -
Flags: review?(florin.strugariu)
Attachment #8338778 -
Flags: review?(andrei.hutusoru)
Comment 6•12 years ago
|
||
Comment on attachment 8338778 [details]
Pointer to Github pull request: https://github.com/mozilla-b2g/gaia/pull/14082
This is the wrong bug. Bad commit message!
Attachment #8338778 -
Attachment is obsolete: true
Attachment #8338778 -
Flags: review?(viorela.ioia)
Attachment #8338778 -
Flags: review?(trifandreialin)
Attachment #8338778 -
Flags: review?(florin.strugariu)
Attachment #8338778 -
Flags: review?(andrei.hutusoru)
You need to log in
before you can comment on or make changes to this bug.
Description
•